--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,8 @@ weight = 1
 section = ["HTML", "print"]
 
 [params]
-copyright = "The Carbyne Stack Authors"
+# Text is integrated in /layouts/partials/footer.html to enable linking to Notice.md
+copyright = " "
 privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
