Migrate to mkdocs (#7)
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,16 @@
 #
 # Copyright (c) 2021 - for information on the respective copyright owner
-# see the NOTICE file and/or the repository https://github.com/carbynestack/castor.
+# see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
 # SPDX-License-Identifier: Apache-2.0
 #
 repos:
-  - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.7
-    hooks:
-      - id: mdformat
-        args:
-          - --wrap
-          - "80"
-        additional_dependencies:
-          - mdformat-gfm
-        exclude: ^themes/.*|content/.*$
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.27.1
+    rev: v0.28.0
     hooks:
       - id: markdownlint
-        exclude: ^themes/.*|content/.*$
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.4.1
+    hooks:
+      - id: prettier
+        types: [css]
