--- a/config/nav.yml
+++ b/config/nav.yml
@@ -8,6 +8,7 @@ nav:
   - Home: index.md
   - Getting Started:
       - getting-started/index.md
+      - Overview: getting-started/overview.md
       - Platform Setup: getting-started/platform-setup.md
       - Stack Deployment: getting-started/deployment.md
       - Millionaires Problem: getting-started/millionaires.md
