--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight
+  - pymdownx.tabbed
   - pymdownx.superfences
   - toc:
       permalink: true
