Fix issue with tabs and copy icons not rendering correctly anymore
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,8 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.superfences
   - toc:
       permalink: true
