Fix edit url to point to master branch
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ extra_css:
   - stylesheets/extra.css
 
 repo_url: https://github.com/carbynestack/carbynestack.github.io
-edit_uri: edit/main/docs
+edit_uri: edit/master/docs
 
 theme:
   name: material
