Fix broken things (#26)
* Pin versions of mkdocs toolchain
* Fix issue with tabs and copy icons not rendering correctly anymore
* Fix edit url to point to master branch

Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ extra_css:
   - stylesheets/extra.css
 
 repo_url: https://github.com/carbynestack/carbynestack.github.io
-edit_uri: edit/main/docs
+edit_uri: edit/master/docs
 
 theme:
   name: material
@@ -48,7 +48,8 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.superfences
   - toc:
       permalink: true
