Add GSoC information (#34)
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -14,6 +14,7 @@ nav:
       - Millionaires Problem: getting-started/millionaires.md
   - Community:
       - Opportunities: community/opportunities.md
+      - Google Summer of Code: community/gsoc.md
   - Legal Information:
       - Privacy Policy: legal/privacy-policy.md
       - Corporate Information: legal/corporate-information.md
