--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,9 @@ theme:
 
 markdown_extensions:
   - admonition
+  - attr_list
   - footnotes
+  - md_in_html
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
