--- a/config/nav.yml
+++ b/config/nav.yml
@@ -9,6 +9,7 @@ nav:
   - Getting Started:
       - getting-started/index.md
       - Overview: getting-started/overview.md
+      - Prerequisites: getting-started/prerequisites.md
       - Platform Setup: getting-started/platform-setup.md
       - Stack Deployment: getting-started/deployment.md
       - Millionaires Problem: getting-started/millionaires.md
