Add page enumerating CS related events
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -16,6 +16,7 @@ nav:
   - Community:
       - Participate: community/participate.md
       - Ecosystem: community/ecosystem.md
+      - Events: community/events.md
       - Opportunities: community/opportunities.md
       - Google Summer of Code: community/gsoc.md
   - Legal Information:
