Add acknowledgement page with BMBF mention
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -19,6 +19,7 @@ nav:
       - Events: community/events.md
       - Opportunities: community/opportunities.md
       - Google Summer of Code: community/gsoc.md
+      - Acknowledgements: community/acknowledgements.md
   - Legal Information:
       - Privacy Policy: legal/privacy-policy.md
       - Corporate Information: legal/corporate-information.md
