Update to latest mkdocs material version
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ theme:
     code: Roboto Mono
   palette:
     - scheme: default
-      primary: black
+      primary: indigo
       accent: red
 
 markdown_extensions:
