Add media coverage page
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -17,6 +17,7 @@ nav:
       - Participate: community/participate.md
       - Ecosystem: community/ecosystem.md
       - Events: community/events.md
+      - Media Coverage: community/media-coverage.md
       - Opportunities: community/opportunities.md
       - Google Summer of Code: community/gsoc.md
       - Acknowledgements: community/acknowledgements.md
