--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ markdown_extensions:
       toc_depth: 3
 
 plugins:
+  - privacy:
+      externals_exclude:
+        - holiday-van.carbynestack.io/*
   - search
   - minify:
       minify_html: true
