--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: 3.x
       - name: Install Material for MkDocs
         run: pip install \
-          git+https://${MKDOC_MATERIAL_INSIDERS}@github.com/squidfunk/mkdocs-material-insiders.git@8.2.11-insiders-4.13.1 \
+          git+https://${MKDOCS_MATERIAL_INSIDERS}@github.com/squidfunk/mkdocs-material-insiders.git@8.2.11-insiders-4.13.1 \
           mkdocs-minify-plugin==0.5.0
       - name: Deploy site
         run: mkdocs gh-deploy --force
