Make banner dismissable
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
   custom_dir: overrides
   language: en
   features:
+    - announce.dismiss
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
