Enable tab linking in tutorials
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ theme:
   language: en
   features:
     - announce.dismiss
+    - content.tabs.link
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
