--- a/config/nav.yml
+++ b/config/nav.yml
@@ -26,3 +26,5 @@ nav:
       - Corporate Information: legal/corporate-information.md
       - Branding Guidelines: legal/branding-guidelines.md
       - Export Control: legal/export-control.md
+  - CarbyneStackCon '22:
+      - community/csc/overview.md
