--- a/config/nav.yml
+++ b/config/nav.yml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021 - for information on the respective copyright owner
+# Copyright (c) 2021-2023 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
 # SPDX-License-Identifier: Apache-2.0
@@ -13,6 +13,7 @@ nav:
       - Platform Setup: getting-started/platform-setup.md
       - Stack Deployment: getting-started/deployment.md
       - Millionaires Problem: getting-started/millionaires.md
+  - Blog: https://blog.carbynestack.io
   - Community:
       - Participate: community/participate.md
       - Ecosystem: community/ecosystem.md
