docs: separating out the CLI configuration out of the deployments and into a separate top-level section
Signed-off-by: Jared Weinfurtner <jared.weinfurtner@de.bosch.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -17,6 +17,7 @@ nav:
           - Manual:
               - Platform Setup: getting-started/deployment/manual/platform-setup.md
               - Stack: getting-started/deployment/manual/stack.md
+      - Configuring the CLI: getting-started/cli.md
       - Millionaires Problem: getting-started/millionaires.md
   - Blog: https://blog.carbynestack.io
   - Community:
