--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021 - for information on the respective copyright owner
+# Copyright (c) 2021-2023 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
 # SPDX-License-Identifier: Apache-2.0
@@ -11,7 +11,7 @@ site_url: https://carbynestack.io/
 site_author: Carbyne Stack Community
 site_description: >-
   Carbyne Stack Documentation
-copyright: "Copyright © 2021-2022 The Carbyne Stack Authors"
+copyright: "Copyright © 2021-2023 The Carbyne Stack Authors"
 
 extra_css:
   - stylesheets/extra.css
