--- a/config/nav.yml
+++ b/config/nav.yml
@@ -10,8 +10,16 @@ nav:
       - getting-started/index.md
       - Overview: getting-started/overview.md
       - Prerequisites: getting-started/prerequisites.md
-      - Platform Setup: getting-started/platform-setup.md
-      - Stack Deployment: getting-started/deployment.md
+      - Deployment:
+          - getting-started/deployment/index.md
+          - Manual:
+              - getting-started/deployment/manual/index.md
+              - Platform Setup: getting-started/deployment/manual/platform-setup.md
+              - Stack: getting-started/deployment/manual/stack.md
+          - Infrastructure as Code:
+              - getting-started/deployment/infrastructure-as-code/index.md
+              - Local: getting-started/deployment/infrastructure-as-code/local.md
+      - Configuring the CLI: getting-started/cli.md
       - Millionaires Problem: getting-started/millionaires.md
   - Blog: https://blog.carbynestack.io
   - Community:
