--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install Material for MkDocs
         run: pip install \
           git+https://${{ secrets.MKDOCS_MATERIAL_INSIDERS }}@github.com/squidfunk/mkdocs-material-insiders.git@8.2.11-insiders-4.13.1 \
-          mkdocs-minify-plugin==0.5.0
+          mkdocs-minify-plugin==0.5.0 mkdocs-swagger-ui-tag==0.6.8
       - name: Deploy site
         run: mkdocs gh-deploy --force
