--- a/config/nav.yml
+++ b/config/nav.yml
@@ -6,21 +6,28 @@
 #
 nav:
   - Home: index.md
-  - Getting Started:
-      - getting-started/index.md
-      - Overview: getting-started/overview.md
-      - Prerequisites: getting-started/prerequisites.md
-      - Deployment:
-          - getting-started/deployment/index.md
-          - Manual:
-              - getting-started/deployment/manual/index.md
-              - Platform Setup: getting-started/deployment/manual/platform-setup.md
-              - Stack: getting-started/deployment/manual/stack.md
-          - Infrastructure as Code:
-              - getting-started/deployment/infrastructure-as-code/index.md
-              - Local: getting-started/deployment/infrastructure-as-code/local.md
-      - Configuring the CLI: getting-started/cli.md
-      - Millionaires Problem: getting-started/millionaires.md
+  - Documentation:
+      - Getting Started:
+          - documentation/getting-started/index.md
+          - Overview: documentation/getting-started/overview.md
+          - Prerequisites: documentation/getting-started/prerequisites.md
+          - Deployment:
+              - documentation/getting-started/deployment/index.md
+              - Manual:
+                  - documentation/getting-started/deployment/manual/index.md
+                  - Platform Setup: documentation/getting-started/deployment/manual/platform-setup.md
+                  - Stack: documentation/getting-started/deployment/manual/stack.md
+              - Infrastructure as Code:
+                  - documentation/getting-started/deployment/infrastructure-as-code/index.md
+                  - Local: documentation/getting-started/deployment/infrastructure-as-code/local.md
+          - Configuring the CLI: documentation/getting-started/cli.md
+          - Millionaires Problem: documentation/getting-started/millionaires.md
+      - Reference:
+          - API Specification:
+              - documentation/reference/api-specification/index.md
+              - Castor: documentation/reference/api-specification/castor.md
+              - Amphora: documentation/reference/api-specification/amphora.md
+              - Ephemeral: documentation/reference/api-specification/ephemeral.md
   - Blog: https://blog.carbynestack.io
   - Community:
       - Participate: community/participate.md
