--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ site_url: https://carbynestack.io/
 site_author: Carbyne Stack Community
 site_description: >-
   Carbyne Stack Documentation
-copyright: "Copyright © 2021-2023 The Carbyne Stack Authors"
+copyright: "Copyright © Linux Foundation Europe"
 
 extra_css:
   - stylesheets/extra.css
