--- a/.github/workflows/stale-issue-cleanup.yml
+++ b/.github/workflows/stale-issue-cleanup.yml
@@ -1,8 +1,8 @@
 #
-# Copyright (c) 2022 - for information on the respective copyright owner
+# Copyright (c) 2022-2025 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: CC-BY-4.0
 #
 name: 'Stale Issue Cleanup'
 
