chore: update mkdocs material to latest version
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,17 +11,18 @@ on:
       - master
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout Source Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
       - name: Install Material for MkDocs
         run: pip install \
-          git+https://${{ secrets.MKDOCS_MATERIAL_INSIDERS }}@github.com/squidfunk/mkdocs-material-insiders.git@8.2.11-insiders-4.13.1 \
-          mkdocs-minify-plugin==0.5.0 mkdocs-swagger-ui-tag==0.6.8
+          mkdocs-material==9.6.8 \
+          mkdocs-minify-plugin==0.7.1 \
+          mkdocs-swagger-ui-tag==0.6.11
       - name: Deploy site
         run: mkdocs gh-deploy --force
