--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021-2023 - for information on the respective copyright owner
+# Copyright (c) 2021-2025 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
 # SPDX-License-Identifier: Apache-2.0
@@ -26,8 +26,11 @@ theme:
   language: en
   features:
     - announce.dismiss
+    - content.code.copy
     - content.tabs.link
     - navigation.instant
+    - navigation.instant.progress
+    - navigation.path
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
@@ -50,11 +53,16 @@ markdown_extensions:
   - md_in_html
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-  - pymdownx.highlight
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.snippets
   - pymdownx.superfences
   - toc:
       permalink: true
@@ -63,8 +71,6 @@ markdown_extensions:
 
 plugins:
   - privacy:
-      externals_exclude:
-        - holiday-van.carbynestack.io/*
   - search
   - minify:
       minify_html: true
