--- a/config/nav.yml
+++ b/config/nav.yml
@@ -1,8 +1,8 @@
 #
-# Copyright (c) 2021-2023 - for information on the respective copyright owner
+# Copyright (c) 2021-2025 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: CC-BY-4.0
 #
 nav:
   - Home: index.md
@@ -41,11 +41,4 @@ nav:
           - CarbyneStackCon '22:
               - community/events/csc22/index.md
       - Media Coverage: community/media-coverage.md
-      - Opportunities: community/opportunities.md
-      - Google Summer of Code: community/gsoc.md
       - Acknowledgements: community/acknowledgements.md
-  - Legal Information:
-      - Privacy Policy: legal/privacy-policy.md
-      - Corporate Information: legal/corporate-information.md
-      - Branding Guidelines: legal/branding-guidelines.md
-      - Export Control: legal/export-control.md
