--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 # Copyright (c) 2021-2025 - for information on the respective copyright owner
 # see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
 #
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: CC-BY-4.0
 #
 INHERIT: config/nav.yml
 
@@ -11,7 +11,7 @@ site_url: https://carbynestack.io/
 site_author: Carbyne Stack Community
 site_description: >-
   Carbyne Stack Documentation
-copyright: "Copyright © 2021-2023 The Carbyne Stack Authors"
+copyright: "Copyright © Linux Foundation Europe"
 
 extra_css:
   - stylesheets/extra.css
